Rename to @documente/documente

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "documente",
+  "name": "@documente/documente",
   "version": "1.0.0",
   "main": "src/index.js",
   "author": "pckerneis",
