--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "tdd",
     "e2e"
   ],
-  "main": "src/index.js",
+  "main": "./dist/index.js",
+  "module": "./dist/index.mjs",
+  "types": "./dist/index.d.ts",
   "author": "pckerneis",
   "license": "GPL-3.0",
   "publishConfig": {
@@ -24,19 +26,23 @@
     "documente": "bin/index.js"
   },
   "files": [
-    "src"
+    "dist"
   ],
   "scripts": {
-    "start": "node src/index.js",
-    "prettier": "prettier --write ."
+    "start": "node src/extract.js",
+    "prettier": "prettier --write .",
+    "build": "tsup src/run/index.ts --format cjs,esm --dts --clean"
   },
   "dependencies": {
-    "@documente/phrase": "^1.0.0-beta.2",
+    "@documente/phrase": "^1.0.0-beta.3",
     "glob": "^10.3.10",
     "mustache": "^4.2.0",
     "yaml": "^2.3.4"
   },
   "devDependencies": {
-    "prettier": "^3.1.0"
+    "cypress": "^13.6.1",
+    "prettier": "^3.1.0",
+    "tsup": "^8.0.1",
+    "typescript": "^5.3.3"
   }
 }
