--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
   },
   "devDependencies": {
     "cypress": "^13.6.1",
+    "playwright": "^1.40.1",
     "prettier": "^3.1.0",
     "tsup": "^8.0.1",
     "typescript": "^5.3.3"
