--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "publishConfig": {
     "access": "public"
   },
+  "type": "module",
   "bin": {
     "documente": "bin/index.js"
   },
@@ -35,6 +36,8 @@
   },
   "dependencies": {
     "@documente/phrase": "^1.0.0-beta.3",
+    "chalk": "^5.3.0",
+    "commander": "^11.1.0",
     "glob": "^10.3.10",
     "mustache": "^4.2.0",
     "yaml": "^2.3.4"
