--- a/package.json
+++ b/package.json
@@ -34,7 +34,10 @@
   "scripts": {
     "start": "node src/extract.js",
     "prettier": "prettier --write .",
-    "build": "tsup src/run/index.ts --format cjs,esm --dts --clean"
+    "build": "tsup src/run/index.ts --format cjs,esm --dts --clean",
+    "docs:dev": "vitepress dev docs",
+    "docs:build": "vitepress build docs",
+    "docs:preview": "vitepress preview docs"
   },
   "dependencies": {
     "@documente/phrase": "^1.0.0-beta.8",
@@ -49,6 +52,8 @@
     "playwright": "^1.40.1",
     "prettier": "^3.1.0",
     "tsup": "^8.0.1",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "vitepress": "^1.0.0-rc.33",
+    "vue": "^3.4.0"
   }
 }
