--- a/package.json
+++ b/package.json
@@ -37,10 +37,11 @@
     "build": "tsup src/run/index.ts --format cjs,esm --dts --clean",
     "docs:dev": "vitepress dev docs",
     "docs:build": "vitepress build docs",
-    "docs:preview": "vitepress preview docs"
+    "docs:preview": "vitepress preview docs",
+    "prepublishOnly": "npm run build && npm run docs:build"
   },
   "dependencies": {
-    "@documente/phrase": "^1.0.0-beta.8",
+    "@documente/phrase": "^1.0.0-beta.11",
     "chalk": "^5.3.0",
     "commander": "^11.1.0",
     "glob": "^10.3.10",
