--- a/package.json
+++ b/package.json
@@ -52,8 +52,6 @@
     "playwright": "^1.40.1",
     "prettier": "^3.1.0",
     "tsup": "^8.0.1",
-    "typescript": "^5.3.3",
-    "vitepress": "^1.0.0-rc.33",
-    "vue": "^3.4.0"
+    "typescript": "^5.3.3"
   }
 }
