--- a/packages/generator/package.json
+++ b/packages/generator/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@documente/extractor",
+  "name": "@documente/generator",
   "version": "1.0.0-beta.0",
   "description": "A literate testing framework to generate automated tests from documentation files",
   "repository": {
