--- a/packages/minimal-example/package.json
+++ b/packages/minimal-example/package.json
@@ -16,6 +16,7 @@
     "test-ui": "playwright test --ui"
   },
   "devDependencies": {
+    "@documente/generator": "^1.0.0-beta.0",
     "@documente/playwright-runner": "^1.0.0-beta.0",
     "@playwright/test": "^1.41.1",
     "@types/node": "^20.11.5"
