--- a/packages/generator/package.json
+++ b/packages/generator/package.json
@@ -32,8 +32,8 @@
     "dist"
   ],
   "scripts": {
-    "start": "node bin/index.mjs",
-    "prettier": "prettier --write ."
+    "prettier:check": "prettier .",
+    "prettier:fix": "prettier --write ."
   },
   "dependencies": {
     "@documente/phrase": "^1.0.0-beta.15",
