--- a/packages/minimal-example/package.json
+++ b/packages/minimal-example/package.json
@@ -12,7 +12,7 @@
   },
   "scripts": {
     "generate-tests": "documente",
-    "prepare-test": "npx playwright install",
+    "prepare-test": "npx playwright install --with-deps",
     "test": "documente && playwright test",
     "test-ui": "playwright test --ui"
   },
