--- a/packages/minimal-example/package.json
+++ b/packages/minimal-example/package.json
@@ -17,8 +17,8 @@
     "test-ui": "playwright test --ui"
   },
   "devDependencies": {
-    "@documente/generator": "^1.0.0-beta.0",
-    "@documente/runner-playwright": "^1.0.0-beta.0",
+    "@documente/generator": "../generator",
+    "@documente/runner-playwright": "../runner-playwright",
     "@playwright/test": "^1.41.1",
     "@types/node": "^20.11.5"
   }
