--- a/packages/kitchen-sink/package.json
+++ b/packages/kitchen-sink/package.json
@@ -13,7 +13,7 @@
     "prepare-test": "npx playwright install --with-deps",
     "test:cypress": "npm run documente:cypress && npm run cypress:run",
     "test:playwright": "wait-on http://localhost:8080 && npm run documente:playwright && npm run playwright:run",
-    "test:all": "wait-on http://localhost:8080 && npm run test:cypress && npm run test:playwright",
+    "test:all": "wait-on http://127.0.0.1:8080 && npm run test:cypress && npm run test:playwright",
     "test": "concurrently \"npm run start\" \"npm run test:all\" --kill-others --success !command-0"
   },
   "devDependencies": {
