--- a/packages/generator/package.json
+++ b/packages/generator/package.json
@@ -39,6 +39,7 @@
     "@documente/phrase": "../phrase",
     "chalk": "^5.3.0",
     "commander": "^11.1.0",
+    "enquirer": "^2.4.1",
     "glob": "^10.3.10",
     "mustache": "^4.2.0",
     "yaml": "^2.3.4"
