--- a/package.json
+++ b/package.json
@@ -19,12 +19,17 @@
   "private": true,
   "scripts": {
     "prettier:check": "npm run prettier:check --workspaces --if-present",
+    "prettier:fix": "npm run prettier:fix --workspaces --if-present",
     "lint": "npm run lint --workspaces --if-present",
     "build": "npm run build --workspaces --if-present",
     "prepare-test": "npm run prepare-test --workspaces --if-present",
-    "test": "npm run test --workspaces --if-present"
+    "test": "npm run test --workspaces --if-present",
+    "run-all-checks": "run-s prettier:fix lint build prepare-test test"
   },
   "workspaces": [
     "packages/*"
-  ]
+  ],
+  "devDependencies": {
+    "npm-run-all": "^4.1.5"
+  }
 }
