Implement 'hover' action

--- a/packages/kitchen-sink/documente-cypress.config.yaml
+++ b/packages/kitchen-sink/documente-cypress.config.yaml
@@ -2,4 +2,4 @@ runner: cypress
 inputFiles: static/index.js
 selectors: documente.selectors.yaml
 env: documente.env.yaml
-testRegex: \`([^`]*)\`\);
+testRegex: test\(\`([^`]*)\`\)
