--- a/packages/kitchen-sink/documente-playwright.config.yaml
+++ b/packages/kitchen-sink/documente-playwright.config.yaml
@@ -2,4 +2,4 @@ runner: playwright
 inputFiles: static/index.js
 selectors: documente.selectors.yaml
 env: documente.env.yaml
-testRegex: \`([^`]*)\`\);
+testRegex: test\(\`([^`]*)\`\)
