--- a/packages/kitchen-sink/package.json
+++ b/packages/kitchen-sink/package.json
@@ -6,11 +6,7 @@
     "start": "npx http-server static -p 8080",
     "clean": "rimraf cypress/e2e e2e",
     "documente:cypress": "documente -c documente-cypress.config.yaml",
-    "documente:cypress:ts": "documente -c documente-cypress.config.yaml --output-language typescript",
-    "documente:cypress:cjs": "documente -c documente-cypress.config.yaml --output-module-resolution cjs",
     "documente:playwright": "documente -c documente-playwright.config.yaml",
-    "documente:playwright:ts": "documente -c documente-playwright.config.yaml --output-language typescript",
-    "documente:playwright:cjs": "documente -c documente-playwright.config.yaml --output-module-resolution cjs",
     "cypress:open": "cypress open",
     "cypress:run": "cypress run",
     "playwright:open": "npx playwright test --ui",
@@ -18,12 +14,8 @@
     "prepare-test": "npx playwright install --with-deps",
     "wait-for-app": "wait-on http://127.0.0.1:8080",
     "test:cypress": "run-s clean wait-for-app documente:cypress cypress:run",
-    "test:cypress:ts": "run-s clean wait-for-app documente:cypress:ts cypress:run",
-    "test:cypress:cjs": "run-s clean wait-for-app documente:cypress:cjs cypress:run",
     "test:playwright": "run-s clean wait-for-app documente:playwright playwright:run",
-    "test:playwright:ts": "run-s clean wait-for-app documente:playwright:ts playwright:run",
-    "test:playwright:cjs": "run-s clean wait-for-app documente:playwright:cjs playwright:run",
-    "test:all": "run-s test:cypress test:playwright test:cypress:ts test:playwright:ts test:cypress:cjs test:playwright:cjs",
+    "test:all": "run-s test:cypress test:playwright",
     "test": "concurrently \"npm run start\" \"npm run test:all\" --kill-others --success !command-0"
   },
   "devDependencies": {
